UI Fixes: - Background is fixed positioned and not tiled - Overflowing of description block is handled - Alignment of the title and the hello message - when changing tab in the ILS it doesn't not scroll back up to show the top bar - Title and greeting message are not links anymore - The tab bar scrolls up and covers the title bar instead of pushing it away

--- a/prod/ils_metawidget_graaspeu/app.css
+++ b/prod/ils_metawidget_graaspeu/app.css
@@ -255,9 +255,6 @@ html{
   margin-left: 35px;
   width: 250px;
 }
-#description_block{
-  padding: 20px 14px;
-}
 .modal-backdrop{
   background-color: rgba(0, 0, 0, 0.5);
 }
